// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AspectWithTreatMissingData 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Queue4A7E3555": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "QueueSqsRecommendedAlarmsFromAspectApproximateAgeOfOldestMessageAlarmC8273C30": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesNotVisibleAlarmEB79B223": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesVisibleAlarmE9291ED6": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsFromAspectNumberOfMessagesSentAlarmBD7C07EE": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`DLQs get normal alarms when dlqsGetFullRecommendedAlarms is true 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Queue11B0C5920": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "dlq1AE1423FE",
              "Arn",
            ],
          },
          "maxReceiveCount": 1,
        },
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "Queue1SqsRecommendedAlarmsFromAspectApproximateAgeOfOldestMessageAlarmAA428975": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue11B0C5920",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue11B0C5920",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue1SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesNotVisibleAlarmB7CE0034": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue11B0C5920",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue11B0C5920",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue1SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesVisibleAlarm566421D2": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue11B0C5920",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue11B0C5920",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue1SqsRecommendedAlarmsFromAspectNumberOfMessagesSentAlarm036998A4": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue11B0C5920",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue11B0C5920",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue26CB7866F": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "dlq2F8ADABC8",
              "Arn",
            ],
          },
          "maxReceiveCount": 1,
        },
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "Queue2SqsRecommendedAlarmsFromAspectApproximateAgeOfOldestMessageAlarm5915905E": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue26CB7866F",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue26CB7866F",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue2SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesNotVisibleAlarmC6CCB221": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue26CB7866F",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue26CB7866F",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue2SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesVisibleAlarm92490689": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue26CB7866F",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue26CB7866F",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue2SqsRecommendedAlarmsFromAspectNumberOfMessagesSentAlarmC65CF909": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue26CB7866F",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue26CB7866F",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq1AE1423FE": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "dlq1SqsRecommendedAlarmsFromAspectApproximateAgeOfOldestMessageAlarm60B7F93D": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq1AE1423FE",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq1AE1423FE",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq1SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesNotVisibleAlarm19A453DA": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq1AE1423FE",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq1AE1423FE",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq1SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesVisibleAlarmE9A4993E": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq1AE1423FE",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq1AE1423FE",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq1SqsRecommendedAlarmsFromAspectNumberOfMessagesSentAlarm656E2F1F": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq1AE1423FE",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq1AE1423FE",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq2F8ADABC8": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "dlq2SqsRecommendedAlarmsFromAspectApproximateAgeOfOldestMessageAlarm00E79D3E": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq2F8ADABC8",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq2F8ADABC8",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq2SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesNotVisibleAlarmEABC2D2C": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq2F8ADABC8",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq2F8ADABC8",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq2SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesVisibleAlarm3DA282B1": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq2F8ADABC8",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq2F8ADABC8",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq2SqsRecommendedAlarmsFromAspectNumberOfMessagesSentAlarm05212C33": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq2F8ADABC8",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq2F8ADABC8",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`DLQs get special alarms by default 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Function1904AA941": {
      "DependsOn": [
        "Function1ServiceRoleDefaultPolicyE89885AD",
        "Function1ServiceRole16CD7E62",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async () => {}",
        },
        "DeadLetterConfig": {
          "TargetArn": {
            "Fn::GetAtt": [
              "dlq39764BFE1",
              "Arn",
            ],
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "Function1ServiceRole16CD7E62",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "Function1ServiceRole16CD7E62": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Function1ServiceRoleDefaultPolicyE89885AD": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:SendMessage",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "dlq39764BFE1",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "Function1ServiceRoleDefaultPolicyE89885AD",
        "Roles": [
          {
            "Ref": "Function1ServiceRole16CD7E62",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Queue11B0C5920": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "dlq1AE1423FE",
              "Arn",
            ],
          },
          "maxReceiveCount": 1,
        },
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "Queue1SqsRecommendedAlarmsFromAspectApproximateAgeOfOldestMessageAlarmAA428975": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue11B0C5920",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue11B0C5920",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue1SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesNotVisibleAlarmB7CE0034": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue11B0C5920",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue11B0C5920",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue1SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesVisibleAlarm566421D2": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue11B0C5920",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue11B0C5920",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue1SqsRecommendedAlarmsFromAspectNumberOfMessagesSentAlarm036998A4": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue11B0C5920",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue11B0C5920",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue26CB7866F": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "dlq2F8ADABC8",
              "Arn",
            ],
          },
          "maxReceiveCount": 1,
        },
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "Queue2SqsRecommendedAlarmsFromAspectApproximateAgeOfOldestMessageAlarm5915905E": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue26CB7866F",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue26CB7866F",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue2SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesNotVisibleAlarmC6CCB221": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue26CB7866F",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue26CB7866F",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue2SqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesVisibleAlarm92490689": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue26CB7866F",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue26CB7866F",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Queue2SqsRecommendedAlarmsFromAspectNumberOfMessagesSentAlarmC65CF909": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue26CB7866F",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue26CB7866F",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Subscription1502865EA": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "SubscriptionQueue3B4F110E",
            "Arn",
          ],
        },
        "Protocol": "sqs",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "dlq42529664C",
              "Arn",
            ],
          },
        },
        "TopicArn": {
          "Ref": "Topic198E71B3E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "SubscriptionQueue3B4F110E": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "SubscriptionQueueSqsRecommendedAlarmsFromAspectApproximateAgeOfOldestMessageAlarmDCEEAF5A": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "SubscriptionQueue3B4F110E",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "SubscriptionQueue3B4F110E",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SubscriptionQueueSqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesNotVisibleAlarm229BD09D": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "SubscriptionQueue3B4F110E",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "SubscriptionQueue3B4F110E",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SubscriptionQueueSqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesVisibleAlarmFA81006D": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "SubscriptionQueue3B4F110E",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "SubscriptionQueue3B4F110E",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "SubscriptionQueueSqsRecommendedAlarmsFromAspectNumberOfMessagesSentAlarm2B4051C1": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "SubscriptionQueue3B4F110E",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "SubscriptionQueue3B4F110E",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Topic198E71B3E": {
      "Type": "AWS::SNS::Topic",
    },
    "dlq1AE1423FE": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "dlq1SqsApproximateNumberOfMessagesVisibleAlarm5971DB28": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq1AE1423FE",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq1AE1423FE",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq2F8ADABC8": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "dlq2SqsApproximateNumberOfMessagesVisibleAlarmFADB459D": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq2F8ADABC8",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq2F8ADABC8",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq39764BFE1": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "dlq3SqsApproximateNumberOfMessagesVisibleAlarm8A351A5D": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq39764BFE1",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq39764BFE1",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq42529664C": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "dlq4PolicyAFE93682": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Ref": "Topic198E71B3E",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "dlq42529664C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "dlq42529664C",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
    "dlq4SqsApproximateNumberOfMessagesVisibleAlarm13F16CAA": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq42529664C",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq42529664C",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Snapshot 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Queue4A7E3555": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "dlq09C78ACC",
              "Arn",
            ],
          },
          "maxReceiveCount": 1,
        },
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "QueueSqsRecommendedAlarmsFromAspectApproximateAgeOfOldestMessageAlarmC8273C30": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesNotVisibleAlarmEB79B223": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesVisibleAlarmE9291ED6": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsFromAspectNumberOfMessagesSentAlarmBD7C07EE": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "dlq09C78ACC": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "dlqSqsApproximateNumberOfMessagesVisibleAlarm308211D8": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "dlq09C78ACC",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "dlq09C78ACC",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SnapshotDefaultActionsInUse 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Queue4A7E3555": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "QueueSqsRecommendedAlarmsApproximateAgeOfOldestMessageAlarmAE219096": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsApproximateNumberOfMessagesNotVisibleAlarmE9F0309B": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsApproximateNumberOfMessagesVisibleAlarmEE98CAEE": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsNumberOfMessagesSentAlarm114DBFFD": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicBFC7AF6E": {
      "Type": "AWS::SNS::Topic",
    },
    "sqsAlarmsApproximateAgeOfOldestMessageAlarm0B88084D": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "sqsAlarmsApproximateNumberOfMessagesNotVisibleAlarm21502969": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "sqsAlarmsApproximateNumberOfMessagesVisibleAlarm46FCC667": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "sqsAlarmsNumberOfMessagesSentAlarmFF7B107E": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SnapshotForBucketConstruct 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Queue4A7E3555": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "QueueSqsRecommendedAlarmsApproximateAgeOfOldestMessageAlarmAE219096": {
      "Properties": {
        "AlarmDescription": "This alarm watches the age of the oldest message in the queue. You can use this alarm to monitor if your consumers are processing SQS messages at the desired speed. Consider increasing the consumer count or consumer throughput to reduce message age. This metric can be used in combination with ApproximateNumberOfMessagesVisible to determine how big the queue backlog is and how quickly messages are being processed. To prevent messages from being deleted before processed, consider configuring the dead-letter queue to sideline potential poison pill messages.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateAgeOfOldestMessage",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsApproximateNumberOfMessagesNotVisibleAlarmE9F0309B": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsApproximateNumberOfMessagesVisibleAlarmEE98CAEE": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsNumberOfMessagesSentAlarm114DBFFD": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SnapshotWithExclusion 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Queue4A7E3555": {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "QueueSqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesNotVisibleAlarmEB79B223": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect a high number of in-flight messages with respect to QueueName. For troubleshooting, check message backlog decreasing (https://repost.aws/knowledge-center/sqs-message-backlog).",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesNotVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesNotVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsFromAspectApproximateNumberOfMessagesVisibleAlarmE9291ED6": {
      "Properties": {
        "AlarmDescription": "This alarm watches for the message queue backlog to be bigger than expected, indicating that consumers are too slow or there are not enough consumers.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - ApproximateNumberOfMessagesVisible",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueSqsRecommendedAlarmsFromAspectNumberOfMessagesSentAlarmBD7C07EE": {
      "Properties": {
        "AlarmDescription": "This alarm helps to detect if there are no messages being sent from a producer with respect to QueueName.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "Queue4A7E3555",
                  "QueueName",
                ],
              },
              " - NumberOfMessagesSent",
            ],
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "Queue4A7E3555",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "NumberOfMessagesSent",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
